docs/data/logainm/v0.9/changelog.ga.md
---
title: Loga athruithe
shortTitle: Loga athruithe
description: Cuntas ar athruithe a bhaineann le API Logainm
keywords: Logainm, API, logainmneacha, logainmníocht, ainmeolaíocht, Gaeilge, Fiontar & Scoil na Gaeilge, DCU
resource: Logainm
order: 4
toc: false
public: true
---

## **v0.9.3** / 2020-02-08

### Forbairtí breise

- Tá [Comhroinnt Sócmhainní Thras-Fhoinse](https://developer.mozilla.org/en-US/docs/Web/HTTP/CORS) (CORS) cumasaithe i gcás API Logainm anois.

### Athruithe

- Leasaíodh [an bhuntreoir](/ga/data/getting-started) leis na forbairtí i dtaca le CORS a chur in iúl.

---

## **v0.9.2** / 2020-01-20

### Athruithe

- Tá feabhas ar chruinneas na n-iarratas geografach, go háirithe sa mhéid a bhaineann le comhordnáidí sráidainmneacha.
- Déantar ceartionchódú ar theagráin URI i gcás oibiachtaí `Image` agus `Audio` anois.

---

## **v0.9.1** / 2019-11-18

### Forbairtí breise

- Cuireadh na paraiméadair iarratais `Page` agus `PerPage` ar fáil chun uimhriú leathanach a éascú i gcás tacar torthaí a bhaineann le háiteanna.
- Cuireadh na hairíonna `TotalPages`, `CurrentPage` agus `CountPerPage` leis an oibiacht `placeList` agus iad le léiriú agus uimhriú leathanach i bhfeidhm ar an tacar torthaí.
- Breis teachtaireachtaí earráide cairdiúla a bhaineann leis an uimhriú (e.g. i gcás earráidí nuair atá innéacs as raon).

### Athruithe

- Leasaíodh an doiciméadacht leis na forbairtí thuasluaite a chur in iúl.
- Tugtar teachtaireachtaí earráide cairdiúla, anuas ar an gcód stádais HTTP cuí, mar chuid den fhreagra a sheoltar i gcás earráidí 400 agus 404.
